# inventorhatmini-python

./: .gitignore  CHANGELOG.md  Makefile  README.md  REFERENCE.md  _bootstrap.md  check.sh  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: qa.yml  test.yml
docs/: plasma.md
examples/: README.md  led_rainbow.py  read_adcs.py  read_encoders.py  read_gpio_encoder.py  read_gpios.py  read_internals.py  read_ultrasound.py  reset_inventor.py  set_gpios.py  watchdog_demo.py
examples/audio/: motor_song.py  play_sound.py  play_sound_aplay.py  play_sound_pygame.py  random_droid.py  tone_song.py
examples/extras/: gpio_encoder.py  read_servo_pins.py  read_ultrasound.py  servo_pin_motor.py  set_servo_pins.py  watchdog_reset.py
examples/motorhatmini/: blink_status.py  multiple_motors_and_servos.py  quad_driving_sequence.py  single_motor.py  single_servo.py
examples/motors/: driving_sequence.py  dual_motors.py  motor_song.py  motor_wave.py  position_control.py  position_on_velocity_control.py  position_wave.py  reactive_encoder.py  single_motor.py  velocity_control.py
examples/motors/tuning/: motor_profiler.py  position_on_velocity_tuning.py  position_tuning.py  velocity_tuning.py
examples/servos/: calibration.py  multiple_servos.py  servo_wave.py  simple_easing.py  single_servo.py
firmware/: firmware_update.py  readme.md  set_i2c_address.py  super_io.fw
inventorhatmini/: __init__.py  plasma.py
tests/: conftest.py  test_setup.py
