[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "inventorhatmini"
dynamic = ["version", "readme"]
description = "Library for the Pimoroni Inventor HAT Mini"
license = {file = "LICENSE"}
requires-python = ">= 3.7"
authors = [
    { name = "Christopher Parrott", email = "chris@pimoroni.com" },
]
maintainers = [
    { name = "Christopher Parrott", email = "chris@pimoroni.com" },
    { name = "Philip Howard", email = "phil@pimoroni.com" },
]
keywords = [
    "Pi",
    "Raspberry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
]
dependencies = [
    "pimoroni-ioexpander",
    "rpi_ws281x"
]

[project.urls]
GitHub = "https://www.github.com/pimoroni/inventorhatmini-python"
Homepage = "https://www.pimoroni.com"

[tool.hatch.version]
path = "inventorhatmini/__init__.py"

[tool.hatch.build]
include = [
    "/inventorhatmini",
    "/examples",
    "/README.md",
    "/CHANGELOG.md",
    "LICENSE"
]

[tool.hatch.build.targets.sdist]
include = [
    "*"
]
exclude = [
    ".*",
    "dist"
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
  { text = "\n" },
  { path = "CHANGELOG.md" }
]

[tool.ruff]
exclude = [
    '.tox',
    '.egg',
    '.git',
    '__pycache__',
    'build',
    'dist'
]
line-length = 250

[tool.codespell]
skip = """
./.tox,\
./.egg,\
./.git,\
./__pycache__,\
./build,\
./dist.\
"""

[tool.isort]
line_length = 250
skip = [
    'examples',
    '.tox'
]

[tool.check-manifest]
ignore = [
    '.stickler.yml',
    'boilerplate.md',
    'check.sh',
    'install.sh',
    'uninstall.sh',
    'Makefile',
    'tox.ini',
    'tests/*',
    'examples/*',
    '.coveragerc'
]

[pimoroni]
apt_packages = ["python3-rpi.gpio", "python3-smbus"]
configtxt = []
commands = []
